--- a/my_serials/templates/base.html
+++ b/my_serials/templates/base.html
@@ -1,7 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-    <title>{% block title %}MY DEFAULT TITLE{% endblock %}</title>
+    <title>{% block title %}My Serials{% endblock %}</title>
 <head>
 <!--    <link rel="stylesheet" href="{% static 'style.css' %}"/>-->
 </head>
@@ -10,6 +10,12 @@
     <a href="{% url "my_serials:all_serials" %}">all serial</a>
     <a href="{% url "my_serials:add_form" %}">add serial</a>
     <a href="{% url "my_serials:search_form" %}">find serial</a>
+    {% if request.user.is_authenticated %}
+        Hi {{ request.user.first_name }}
+    <a href="{% url "my_serials:logout" %}"> logout </a>
+    {% else %}
+        <a href="{% url "my_serials:login" %}"> login </a>
+    {% endif %}
 </header>
     {% block content %}
     {% endblock %}
