--- a/my_serials/templates/registration/logged_out.html
+++ b/my_serials/templates/registration/logged_out.html
@@ -1,5 +1,7 @@
-{% extends "base.html" %}
 {% block title%} logout {% endblock%}
 {% block content%}
-logged out y can login again 	<a href="{% url "my_serials:login" %}">Login</a>
+Logged out
+<p>
+    <a href="{% url "my_serials:login" %}">Login</a>
+</p>
 {% endblock %}
