--- a/my_serials/templates/registration/login.html
+++ b/my_serials/templates/registration/login.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %}
-{% block title%} login {% endblock%}
+{% block title%} Login {% endblock%}
 {% block content%}
 {% if form.errors %}
     bad credentials
