--- a/my_serials/templates/serial/details.html
+++ b/my_serials/templates/serial/details.html
@@ -5,7 +5,7 @@
         <div class="container">
             <div class="details" background="https://image.tmdb.org/t/p/original{{ info.backdrop_path }}">
                 <div class="sidebar">
-                    <img class="details__image" src='https://image.tmdb.org/t/p/w300{{ info.poster_path }}' onerror="this.src='https://dummyimage.com/600x900/ababab/ffffff.png&amp;text=+NoPoster'"/>
+                    <img class="details__image" src='https://image.tmdb.org/t/p/w300{{ info.poster_path }}'/>
 
                     <div class="details__content-header">
                         <p>Runtime</p>
