--- a/my_serials/templates/base.html
+++ b/my_serials/templates/base.html
@@ -3,23 +3,45 @@
 <html lang="en">
     <title>{% block title %}My Serials{% endblock %}</title>
 <head>
-<!--    <link rel="stylesheet" href="{% static 'style.css' %}"/>-->
+    <!--Bootstrap-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <!--Styles-->
+    <link href="{% static "sticky-footer-navbar.css" %}" rel="stylesheet">
+    <link href="{% static "dark-mode.css" %}" rel="stylesheet">
+
 </head>
 <body>
-<header>
-    <a href="{% url "my_serials:all_serials" %}">My serials</a>
-    <a href="{% url "my_serials:search_form" %}">Add serial</a>
-    {% if request.user.is_authenticated %}
-        Hi {{ request.user.first_name }}
-    <a href="{% url "my_serials:logout" %}"> Logout </a>
-    {% else %}
-        <a href="{% url "my_serials:login" %}"> Login </a>
-    {% endif %}
-</header>
-    {% block content %}
-    {% endblock %}
-    <div class="footer">
-        <img src="{% static 'resources/powered_by_tmdb.png' %}" alt="" height="50rem" style="margin:1rem 1rem">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-10">
+                <a href="{% url "my_serials:all_serials" %}">My serials</a>
+                <a href="{% url "my_serials:search_form" %}">Add serial</a>
+                <div class="custom-control custom-switch">
+                    <input type="checkbox" class="custom-control-input" id="darkSwitch" />
+                    <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
+                </div>
+                <script src="{% static "dark-mode-switch.min.js" %}"></script>
+                {% if request.user.is_authenticated %}
+                    Hi {{ request.user.first_name }}
+                    <a href="{% url "my_serials:logout" %}">Logout</a>
+                {% else %}
+                    <a href="{% url "my_serials:login" %}">Login</a>
+                {% endif %}
+                <h1 class="mt-2">My Serials</h1>
+                <hr class="mt-0 mb-4">
+                {% block content %}
+                {% endblock %}
+            </div>
+        </div>
     </div>
+    <footer class="footer">
+        <div class="container">
+            <span class="row justify-content-center">
+                 <img src="{% static 'resources/powered_by_tmdb.png' %}" alt="" height="60em">
+            </span>
+        </div>
+
+    </footer>
 </body>
 </html>
