--- a/my_serials/templates/registration/login.html
+++ b/my_serials/templates/registration/login.html
@@ -1,13 +1,25 @@
+{% extends "base.html" %}
 {% block title%} Login {% endblock%}
 {% block content%}
 {% if form.errors %}
-    bad credentials
+    <div class="alert alert-danger" role="alert">
+        Wrong username or password
+    </div>
 {% endif %}
-<form action="{% url "my_serials:login" %}" method="post">
-    {{ form.as_p }}
-    {% csrf_token %}
-    <input type="hidden" name="next" value="{{ next }}">
-    <p><input type="submit" value="login"></p>
-</form>
-<p><a href="{% url "my_serials:password_reset" %}">reset</a></p>
+{% load crispy_forms_tags %}
+<div class="row justify-content-center">
+    <div class="col-6">
+        <form action="{% url "my_serials:login" %}" method="post">
+            {{ form|crispy }}
+            {% csrf_token %}
+            <input type="hidden" name="next" value="{{ next }}">
+            <div class="row justify-content-center">
+                <div class="btn-group" role="group" aria-label="Basic example">
+                    <button type="submit" value="login" class="btn btn-success">Login</button>
+                    <a href="{% url "my_serials:password_reset" %}" class="btn btn-info" role="button">Forgot password?</a>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock %}
